--- a/templates/base.html
+++ b/templates/base.html
@@ -10,17 +10,24 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="{% url 'home' %}">E-Commerce</a>
         <div class="collapse navbar-collapse">
-            <ul class="navbar-nav ml-auto">
+             <ul class="navbar-nav ml-auto">
+            {% if user.is_authenticated %}
+                <li class="nav-item">
+                    <span class="nav-link">Welcome, {{ user.username }}</span>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+                </li>
+            {% else %}
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'login' %}">Login</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'register_customer' %}">Customer Register</a>
+                    <a class="nav-link" href="{% url 'register_user' %}">Register</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'register_company' %}">Company Register</a>
-                </li>
-            </ul>
+            {% endif %}
+        </ul>
         </div>
     </nav>
 
